--- a/Achievement tracker/Base.lproj/Main.storyboard
+++ b/Achievement tracker/Base.lproj/Main.storyboard
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="re2-50-96W">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -12,19 +13,19 @@
             <objects>
                 <tableViewController id="cbe-0l-zJY" customClass="TitlesTableViewController" customModule="Achievement_tracker" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="EYI-kD-daI">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="GameCell" textLabel="obC-JE-DDd" style="IBUITableViewCellStyleDefault" id="tYX-Ru-Mzk">
-                                <rect key="frame" x="0.0" y="44.5" width="600" height="43.5"/>
+                                <rect key="frame" x="0.0" y="44.5" width="414" height="43.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="tYX-Ru-Mzk" id="XdT-Ah-Rgx">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="obC-JE-DDd">
-                                            <rect key="frame" x="20" y="0.0" width="560" height="43.5"/>
+                                            <rect key="frame" x="20" y="0.0" width="374" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
                                             <nil key="textColor"/>
@@ -57,36 +58,66 @@
             </objects>
             <point key="canvasLocation" x="928.98550724637687" y="-22.098214285714285"/>
         </scene>
-        <!--View Controller-->
+        <!--Powered by-->
         <scene sceneID="cka-gA-b0q">
             <objects>
                 <viewController id="Q31-6E-ptf" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="rmm-ec-RWH">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="2022-03-22 14.58.23" translatesAutoresizingMaskIntoConstraints="NO" id="I3g-X9-ESR">
+                                <rect key="frame" x="20" y="160" width="374" height="329"/>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="43" translatesAutoresizingMaskIntoConstraints="NO" id="la3-gH-eCH">
+                                <rect key="frame" x="20" y="529" width="374" height="91"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Подшибякин Виталий Алексеевич " textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pm7-PL-QpE">
+                                        <rect key="frame" x="27.5" y="0.0" width="319.5" height="24"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Голосов Владислав Евгеньевич" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f3P-AK-emS">
+                                        <rect key="frame" x="42.5" y="67" width="289" height="24"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6oU-oL-hj1"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="I3g-X9-ESR" firstAttribute="top" secondItem="6oU-oL-hj1" secondAttribute="top" constant="20" id="EuE-I5-8ZW"/>
+                            <constraint firstItem="I3g-X9-ESR" firstAttribute="leading" secondItem="6oU-oL-hj1" secondAttribute="leading" constant="20" id="H0X-FA-bn4"/>
+                            <constraint firstItem="la3-gH-eCH" firstAttribute="leading" secondItem="6oU-oL-hj1" secondAttribute="leading" constant="20" id="hvB-Js-dhg"/>
+                            <constraint firstAttribute="trailing" secondItem="I3g-X9-ESR" secondAttribute="trailing" constant="20" id="qbc-yV-zbc"/>
+                            <constraint firstItem="6oU-oL-hj1" firstAttribute="trailing" secondItem="la3-gH-eCH" secondAttribute="trailing" constant="20" id="t2P-p3-pg6"/>
+                            <constraint firstItem="la3-gH-eCH" firstAttribute="top" secondItem="I3g-X9-ESR" secondAttribute="bottom" constant="40" id="ttv-zw-uVx"/>
+                        </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="dDU-sf-EH7"/>
+                    <navigationItem key="navigationItem" title="Powered by" id="dDU-sf-EH7"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WvF-Q0-kRx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="929" y="717"/>
+            <point key="canvasLocation" x="928.98550724637687" y="716.51785714285711"/>
         </scene>
         <!--Achievements List View Controller-->
         <scene sceneID="z3I-3F-ri6">
             <objects>
                 <tableViewController id="tTa-df-Nbv" customClass="AchievementsListViewController" customModule="Achievement_tracker" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="0eZ-cK-zU0">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="achievementCell" textLabel="xbs-AL-NoB" detailTextLabel="Xqk-15-9HW" style="IBUITableViewCellStyleValue1" id="VGr-IH-PGe">
-                                <rect key="frame" x="0.0" y="44.5" width="600" height="43.5"/>
+                                <rect key="frame" x="0.0" y="44.5" width="414" height="43.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="VGr-IH-PGe" id="7CT-1Y-zxc">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="xbs-AL-NoB">
@@ -97,7 +128,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Xqk-15-9HW">
-                                            <rect key="frame" x="547" y="15" width="33" height="14.5"/>
+                                            <rect key="frame" x="361" y="15" width="33" height="14.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
                                             <nil key="textColor"/>
@@ -126,23 +157,23 @@
             <objects>
                 <viewController id="Buw-BD-tBm" customClass="FullInfoViewController" customModule="Achievement_tracker" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Xg9-GJ-hM5">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NR1-t3-L82">
-                                <rect key="frame" x="279.5" y="496" width="41.5" height="20.5"/>
+                                <rect key="frame" x="186.5" y="540" width="41.5" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hHD-6g-JRQ">
-                                <rect key="frame" x="0.0" y="116" width="600" height="200"/>
+                                <rect key="frame" x="0.0" y="160" width="414" height="200"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="200" id="hg5-Wm-OZk"/>
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="Ena-HC-XPs">
-                                <rect key="frame" x="247" y="346" width="106.5" height="50"/>
+                                <rect key="frame" x="154" y="390" width="106.5" height="50"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="xlogo" translatesAutoresizingMaskIntoConstraints="NO" id="7TD-X0-Q4C">
                                         <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
@@ -204,6 +235,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="2022-03-22 14.58.23" width="480" height="329"/>
         <image name="questionmark.circle.fill" catalog="system" width="128" height="121"/>
         <image name="xlogo" width="512" height="512"/>
         <systemColor name="systemBackgroundColor">
